--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </header>
     <main>
-      <div class="time">time: 00:00</div>
+      <div class="time">00:00</div>
 
       <div class="board-row row-0">
         <div class="board-block" data-index="00"></div>
